--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/tiagoluizrs/node-balanca-serial/issues"
   },
-  "homepage": "https://github.com/tiagoluizrs/node-balanca-serial#readme"
+  "homepage": "https://github.com/tiagoluizrs/node-balanca-serial#readme",
+  "dependencies": {
+    "@serialport/parser-readline": "^12.0.0",
+    "serialport": "^12.0.0"
+  }
 }
